istio/istio-dep.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: my-gateway
  namespace: capstone-ns1
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "www.techcastle.online"

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-routing
  namespace: capstone-ns1
spec:
  hosts:
  - "www.techcastle.online"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: websvc
        port:
          number: 80
